2014-10-03  David B. Lamkins  <david@lamkins.net>

	* menu.h (): Implemented file Open, Save and Save As.

	* edit.h (): Implemented file Open, Save and Save As.

	* menu.c (import_file, set_filename, save_log, save_log_as)
	(build_menubar): Implemented file Open, Save and Save As.

	* edit.c (set_status_line, edit_save_object_cb)
	(edit_save_object, clone_file, edit_save_file, edit_save_file_as)
	(edit_delete_real, edit_delete_event, build_edit_menubar)
	(edit_object, edit_file): Implemented file Open, Save and Save As.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* menu.c (open_object_cb): Fit edit object selector to width of
	longest name.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* menu.c (settings_cb, build_menubar): Add mnemonics to menus and
	menu items.

	* edit.c (trim_length, edit_function_cb): Strip trailing blanks
	from function lines.
	(build_edit_menubar): Add mnemonics to menus and menu items.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* edit.c (set_status_line): Correct line count in status line.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* edit.h (struct buffer_s): Removed modified member; we now rely
	upon the GtkTextBuffer's modification query.

	* edit.c (set_status_line, edit_mark_set_event, edit_save_cb)
	(edit_delete_real, edit_key_press_event, edit_function_cb, )
	(edit_object): Line and column numbers are now displayed in origin
	0. Line and column numbers update in sync with cursor movement,
	whether via keyboard or mouse. Edit window opens with cursor at
	<0,0>.

2014-10-01  David Lamkins <david@lamkins.net>

	No file details for 12 patches covering the following fixes:

	1. [lamkins_prompt_cursor_home.patch] Generalize the
	home-to-end-of-prompt behavior for all APL prompts; not just the
	six-space prompt.

	2. [lamkins_output_perror.patch] Correct a bug in error checking
	for the four output routines and add a perror() call to each to
	report unexpected errors.
